--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "campuspandit-pwa",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pwa:generate-icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -28,6 +29,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-pwa": "^0.17.4",
+    "workbox-window": "^7.0.0"
   }
 }
