--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@supabase/supabase-js": "^2.39.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "katex": "^0.16.9",
+    "react-katex": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -28,7 +30,9 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
+    "typescript": "^5.5.3", 
+    "@types/katex": "^0.16.7",
+    "@types/react-katex": "^0.11.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.19",
     "vite-plugin-pwa": "^0.20.5",
