Implement Supabase OAuth Integration

--- a/.env.local.example
+++ b/.env.local.example
@@ -2,6 +2,10 @@
 # Copy this file to .env.local and update with your local settings
 # .env.local is ignored by git for security
 
+# Supabase Configuration
+VITE_SUPABASE_URL="https://your-project-url.supabase.co"
+VITE_SUPABASE_ANON_KEY="your-anon-key"
+
 # App Configuration
 VITE_APP_TITLE="CampusPandit - Local Development"
 VITE_APP_VERSION="1.0.0-local"
