--- a/.env.production
+++ b/.env.production
@@ -6,6 +6,10 @@ VITE_APP_TITLE="CampusPandit - Smart Learning Platform"
 VITE_APP_VERSION="1.0.0"
 VITE_APP_ENVIRONMENT="production"
 
+# Supabase Configuration
+VITE_SUPABASE_URL="https://your-production-project-url.supabase.co"
+VITE_SUPABASE_ANON_KEY="your-production-anon-key"
+
 # API Configuration
 VITE_API_BASE_URL="https://api.campuspandit.com"
 VITE_API_TIMEOUT="15000"
