--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.22.3",
     "@supabase/supabase-js": "^2.39.0",
     "katex": "^0.16.9",
     "react-katex": "^3.0.1"
