--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "react-router-dom": "^6.22.3",
     "@supabase/supabase-js": "^2.39.0",
     "katex": "^0.16.9",
-    "react-katex": "^3.0.1"
+    "react-katex": "^3.0.1",
+    "date-fns": "^2.30.0",
+    "react-dropzone": "^14.2.3",
+    "react-player": "^2.13.0",
+    "react-quill": "^2.0.0",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
