--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "pwa:generate-icons": "node scripts/generate-icons.js"
+    "pwa:generate-icons": "node scripts/generate-icons.js",
+    "import-questions": "node scripts/import-questions.js"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
