--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "pwa:generate-icons": "node scripts/generate-icons.js",
-    "import-questions": "node scripts/import-questions.js"
+    "import-questions": "node scripts/import-questions.js",
+    "scrape-questions": "node scripts/scrape-questions.js"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -27,6 +28,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "axios": "^1.6.7",
+    "chalk": "^5.3.0",
+    "cheerio": "^1.0.0-rc.12",
+    "commander": "^12.0.0",
+    "csv-writer": "^1.6.0",
+    "fs-extra": "^11.2.0",
+    "ora": "^8.0.1",
+    "puppeteer": "^22.4.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
