--- a/package.json
+++ b/package.json
@@ -13,41 +13,45 @@
     "scrape-questions": "node scripts/scrape-questions.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
+    "csv-parser": "^3.2.0",
+    "csv-stringify": "^6.6.0",
+    "date-fns": "^2.30.0",
+    "katex": "^0.16.9",
     "lucide-react": "^0.344.0",
+    "natural": "^8.1.0",
+    "openai": "^5.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
-    "@supabase/supabase-js": "^2.39.0",
-    "katex": "^0.16.9",
-    "react-katex": "^3.0.1",
-    "date-fns": "^2.30.0",
     "react-dropzone": "^14.2.3",
+    "react-katex": "^3.0.1",
+    "react-markdown": "^9.0.1",
     "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
-    "react-markdown": "^9.0.1"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/katex": "^0.16.7",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
     "chalk": "^5.3.0",
     "cheerio": "^1.0.0-rc.12",
     "commander": "^12.0.0",
     "csv-writer": "^1.6.0",
-    "fs-extra": "^11.2.0",
-    "ora": "^8.0.1",
-    "puppeteer": "^22.4.0",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "fs-extra": "^11.2.0",
     "globals": "^15.9.0",
+    "ora": "^8.0.1",
     "postcss": "^8.4.35",
+    "puppeteer": "^22.4.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3", 
-    "@types/katex": "^0.16.7",
+    "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.19",
     "vite-plugin-pwa": "^0.20.5",
