--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "csv-parse": "^6.0.0",
     "csv-parser": "^3.2.0",
     "csv-stringify": "^6.6.0",
     "date-fns": "^2.30.0",
@@ -28,7 +29,8 @@
     "react-markdown": "^9.0.1",
     "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
